#----------------------------------------------------------
message(STATUS "Entering directory projects/04_day/")
add_subdirectory(harib01a)
add_subdirectory(harib01b)
add_subdirectory(harib01c)
add_subdirectory(harib01d)
add_subdirectory(harib01e)
add_subdirectory(harib01f)
add_subdirectory(harib01g)
add_subdirectory(harib01h)
