#----------------------------------------------------------
message(STATUS "Entering directory projects/07_day/")
add_subdirectory(harib04a)
add_subdirectory(harib04b)
add_subdirectory(harib04c)
add_subdirectory(harib04d)
add_subdirectory(harib04e)
add_subdirectory(harib04f)
add_subdirectory(harib04g)
