#----------------------------------------------------------
message(STATUS "Entering directory projects/12_day/")
add_subdirectory(harib09a)
add_subdirectory(harib09b)
add_subdirectory(harib09c)
add_subdirectory(harib09d)
add_subdirectory(harib09e)
add_subdirectory(harib09f)
add_subdirectory(harib09g)
